Fix IE7 alignment. Fixed #125

--- a/assets/sass/framework/partials/objects/_pager.scss
+++ b/assets/sass/framework/partials/objects/_pager.scss
@@ -23,6 +23,7 @@
 .pager li,
 .pager__item {
 	display: inline;
+	float: left; // required for IE7 alignment
 }
 
 .pager__link,
